--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "validate": "npm run prettier -- --list-different && npm run lint"
   },
   "dependencies": {
-    "next": "10.0.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.11.0",
@@ -30,22 +27,25 @@
     "immer": "^7.0.9",
     "material-ui-image": "^3.3.0",
     "moment": "^2.29.1",
+    "next": "10.0.5",
     "papaparse": "^5.3.0",
     "qs": "^6.9.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-hook-form": "^6.10.1",
     "react-papaparse": "^3.11.1",
     "react-query": "^3.4.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^6.1.0",
     "recoil": "^0.0.13",
+    "sass": "^1.32.5",
     "yup": "^0.29.3",
     "zustand": "^3.1.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "typescript": "^4.1.3",
     "@types/papaparse": "^5.2.4",
+    "@types/react": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
@@ -56,7 +56,8 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.2",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
