--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
+    "@types/google-maps": "^3.2.2",
     "@types/qs": "^6.9.5",
     "@types/yup": "^0.29.9",
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
+    "google-maps": "^4.3.3",
     "history": "^5.0.0",
     "immer": "^7.0.9",
     "material-ui-image": "^3.3.0",
