--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "esnext.asynciterable"],
+    "types": ["googlemaps"],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "preserve",
