--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/pickers": "^3.2.10",
     "@types/google-maps": "^3.2.2",
     "@types/qs": "^6.9.5",
+    "@types/react-slick": "^0.23.4",
     "@types/react-swipeable-views": "^0.13.0",
     "@types/yup": "^0.29.9",
     "axios": "^0.21.1",
@@ -40,6 +41,7 @@
     "react-papaparse": "^3.11.1",
     "react-query": "^3.4.0",
     "react-router-dom": "^5.2.0",
+    "react-slick": "^0.28.0",
     "react-swipeable-views": "^0.13.9",
     "react-toastify": "^6.1.0",
     "recoil": "^0.0.13",
