--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "react-query": "^3.4.0",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.0",
+    "react-social-login": "3.4.11",
     "react-swipeable-views": "^0.13.9",
     "react-toastify": "^6.1.0",
     "recoil": "^0.0.13",
     "sass": "^1.32.5",
     "yup": "^0.29.3",
-    "zustand": "^3.1.3"
+    "zustand": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
