--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/yup": "^0.29.9",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "form-data": "^4.0.0",
     "google-maps": "^4.3.3",
     "history": "^5.0.0",
     "immer": "^7.0.9",
@@ -42,11 +43,12 @@
     "react-query": "^3.4.0",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.0",
-    "react-social-login": "3.4.11",
+    "react-social-login": "https://github.com/hdminh247/react-social-login.git",
     "react-swipeable-views": "^0.13.9",
     "react-toastify": "^6.1.0",
     "recoil": "^0.0.13",
     "sass": "^1.32.5",
+    "use-force-update": "^1.0.7",
     "yup": "^0.29.3",
     "zustand": "^3.3.3"
   },
