--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "qs": "^6.9.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-grid-gallery": "^0.5.5",
     "react-hook-form": "^6.10.1",
     "react-papaparse": "^3.11.1",
+    "react-photo-gallery": "^8.0.0",
     "react-query": "^3.4.0",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.0",
