--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@types/google-maps": "^3.2.2",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/qs": "^6.9.5",
     "@types/react-slick": "^0.23.4",
     "@types/react-swipeable-views": "^0.13.0",
