--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "google-maps": "^4.3.3",
     "history": "^5.0.0",
     "immer": "^7.0.9",
+    "jodit-react": "^1.0.83",
     "material-ui-image": "^3.3.0",
     "moment": "^2.29.1",
     "next": "10.0.5",
