--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_API_URL=http://localhost:3001
-PUBLIC_PAGE_BASE_URL=http://localhost:3001
+NEXT_PUBLIC_BASE_URL=http://account.trueartists.com
+NEXT_PUBLIC_API_URL=http://trueartists.com
+PUBLIC_PAGE_BASE_URL=http://trueartists.com
 GOOGLE_APP_ID=848328917964-48qbqgoni1bevq57sdue1tgnavatl95l.apps.googleusercontent.com
 INSTAGRAM_APP_ID=130209655678744
 INSTAGRAM_APP_SECRET=9ed0bc4aed746a02fbce04845f0a52e8
-NEXT_PUBLIC_INSTAGRAM_REGISTER_REDIRECT_URL=https://localhost:3000/register/
-NEXT_PUBLIC_INSTAGRAM_LOGIN_REDIRECT_URL=https://localhost:3000/login/
+NEXT_PUBLIC_INSTAGRAM_REGISTER_REDIRECT_URL=https://account.trueartists.com/register/
+NEXT_PUBLIC_INSTAGRAM_LOGIN_REDIRECT_URL=https://account.trueartists.com/login/
