--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "validate": "npm run prettier -- --list-different && npm run lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.23.0",
+    "@aws-sdk/s3-request-presigner": "^3.23.0",
     "@date-io/date-fns": "1.x",
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
