update admin jodit editor custom s3 upload button

--- a/.env.development
+++ b/.env.development
@@ -6,8 +6,8 @@ INSTAGRAM_APP_ID=130209655678744
 INSTAGRAM_APP_SECRET=9ed0bc4aed746a02fbce04845f0a52e8
 NEXT_PUBLIC_INSTAGRAM_REGISTER_REDIRECT_URL=https://localhost:3000/register/
 NEXT_PUBLIC_INSTAGRAM_LOGIN_REDIRECT_URL=https://localhost:3000/login/
-
-AWS_ACCESS_KEY_ID='AKIASXKHHATR7R4LCTTP'
-AWS_SECRET_ACCESS_KEY='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'
-AWS_BUCKET='ta-qa'
-AWS_REGION='us-west-1'
+NEXT_PUBLIC_CDN_HOST=https://ta-qa.s3.us-west-1.amazonaws.com/
+AWS_ACCESS_KEY_ID=AKIASXKHHATR7R4LCTTP
+AWS_SECRET_ACCESS_KEY=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
+AWS_BUCKET=ta-qa
+AWS_REGION=us-west-1
