--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-papaparse": "^3.11.1",
     "react-photo-gallery": "^8.0.0",
     "react-query": "^3.4.0",
+    "react-recaptcha-x": "^1.1.13",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.0",
     "react-social-login": "^3.4.13",
