--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,7 @@ INSTAGRAM_APP_SECRET=9ed0bc4aed746a02fbce04845f0a52e8
 NEXT_PUBLIC_INSTAGRAM_REGISTER_REDIRECT_URL=https://localhost:3000/register/
 NEXT_PUBLIC_INSTAGRAM_LOGIN_REDIRECT_URL=https://localhost:3000/login/
 NEXT_PUBLIC_CDN_HOST=https://ta-qa.s3.us-west-1.amazonaws.com/
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 AWS_ACCESS_KEY_ID=AKIASXKHHATR7R4LCTTP
 AWS_SECRET_ACCESS_KEY=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
 AWS_BUCKET=ta-qa
